After merging with Bhavesh's changes

--- a/web.config
+++ b/web.config
@@ -11,6 +11,11 @@
     <add key="GenericChartLiteralHeight" value="400"/>
     <add key="DocumentsUploadLocation" value="~/UserDocuments/"/>
     <add key="DefaultPageSize" value="20"/>
+    <add key="Server.Hostname" value="smtp.test.com"/>
+    <add key="Server.Port" value="25"/>
+    <add key="Server.Username" value="serverxyz"/>
+    <add key="Server.Password" value="ZI5a5YwZoKV4vF2XKBqm"/>
+    <add key="General.SendBlastEmails" value="true" />
   </appSettings>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=SandlerDB" providerName="System.Data.SqlClient"/>
