Email test read settings from config

--- a/web.config
+++ b/web.config
@@ -13,6 +13,7 @@
     <add key="DefaultPageSize" value="20"/>
     <add key="Server.Hostname" value="smtp.test.com"/>
     <add key="Server.Port" value="25"/>
+    <add key="Server.UseDefaultCredentials" value="false"/>
     <add key="Server.Username" value="serverxyz"/>
     <add key="Server.Password" value="ZI5a5YwZoKV4vF2XKBqm"/>
     <add key="General.SendBlastEmails" value="true" />
