ELMAH implemented with custom error page

--- a/web.config
+++ b/web.config
@@ -4,6 +4,19 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+
+  <configSections>
+    <sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup>
+  </configSections>
+  <elmah>
+    <errorLog type="Elmah.SqlErrorLog, Elmah" connectionStringName="SandlerDBConnection" />
+    <security allowRemoteAccess="0" />
+  </elmah>
   <appSettings>
     <add key="QueryStringParamDrillChartIDs" value="drillChartIds"/>
     <add key="QueryStringParamDrillBy" value="drillBy"/>
@@ -30,6 +43,8 @@
     -->
   </connectionStrings>
   <system.web>
+    <customErrors mode="On"
+                      defaultRedirect="~/Error.aspx" />
     <authorization>
       <deny users="?"/>
     </authorization>
@@ -71,11 +86,23 @@
         <add name="XmlSiteMapProvider" description="Default SiteMap provider." type="System.Web.XmlSiteMapProvider " siteMapFile="Web.sitemap" securityTrimmingEnabled="true"/>
       </providers>
     </siteMap>
+    <httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+    </httpModules>
+    <httpHandlers>
+      <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+    </httpHandlers>
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+    </modules>
     <httpErrors errorMode="Detailed" />
     <asp scriptErrorSentToBrowser="true" />
+    <handlers>
+      <add name="Elmah" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+      <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
+    </handlers>
   </system.webServer>
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true"/>
