Email test setup from config settings

--- a/web.config
+++ b/web.config
@@ -31,6 +31,10 @@
     <add key="Server.Username" value="serverxyz"/>
     <add key="Server.Password" value="ZI5a5YwZoKV4vF2XKBqm"/>
     <add key="General.SendBlastEmails" value="true" />
+    <add key="testEmailSenderAccount" value="donotreplay@sandlermatrix.com"/>
+    <add key="testEmailsAccounts" value="adarling1614@gmail.com;thakkarbhav@hotmail.com;paula.darling@minedsystems.com;jshahcareer@gmail.com"/>
+    <add key="testMessageSubject" value="SandlerMatrix:Test Message"/>
+    <add key="testMessageBody" value="This is just a test message from Sandler application email system. Please ignore it."/>
   </appSettings>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;initial catalog=SandlerDB" providerName="System.Data.SqlClient"/>
