Fotter/Email changes changes with Franchisee Manage

--- a/web.config
+++ b/web.config
@@ -48,7 +48,7 @@
     -->
   </connectionStrings>
   <system.web>
-    <customErrors mode="On"
+    <customErrors mode="RemoteOnly"
                       defaultRedirect="~/Error.aspx" />
     <authorization>
       <deny users="?"/>
