--- a/Account/FranchiseeOwner/Web.config
+++ b/Account/FranchiseeOwner/Web.config
@@ -1,18 +1,9 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-
-  <location path="Register.aspx">
-    <system.web>
-      <authorization>
-        <allow users="*"/>
-      </authorization>
-    </system.web>
-  </location>
-
   <system.web>
     <authorization>
-      <deny users="?"/>
+      <allow roles="Coach" />
+      <deny users="*" />
     </authorization>
   </system.web>
-
 </configuration>
